test/files/neg/wellkinded_wrongarity.check
wellkinded_wrongarity.scala:5: error: Tuple2 takes 2 type parameters, expected: 1
object mp extends Monad[Tuple2]
                        ^
1 error
